<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="androidthreading.gooner10.com.androidthreading.ExecutorServiceActivity"
    tools:showIn="@layout/activity_executor_service">

    <Button
        android:id="@+id/runnable_executor_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/runnable_executorservice"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/callable_executor_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/callable_executorservice"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="177dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/runnable_executor_service"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1.0"  />

    <Button
        android:id="@+id/threadpool_executor_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/threadpool_executor_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callable_executor_service"
        app:layout_constraintVertical_bias="0.102" />
</android.support.constraint.ConstraintLayout>
